configure.ac: Use HaskellTargetOs to pick up all Darwin variants in a few places

--- a/configure.ac
+++ b/configure.ac
@@ -575,7 +575,8 @@ fi
 NmCmd="$NM"
 AC_SUBST([NmCmd])
 
-if test "$TargetOS_CPP" = "darwin"
+# Use `HaskellTargetOs` in order to conflate Darwin variants
+if test "$HaskellTargetOs" = "OSDarwin"
 then
     AC_MSG_CHECKING(whether nm program is broken)
     # Some versions of XCode ship a broken version of `nm`. Detect and work
@@ -833,12 +834,14 @@ HaveDtrace=NO
 
 AC_PATH_PROG(DtraceCmd,dtrace)
 if test "x$EnableDtrace" = "xyes"; then
-  if test -n "$DtraceCmd"; then
-    if test "x$TargetOS_CPP-$TargetVendor_CPP" = "xdarwin-apple" \
-      -o "x$TargetOS_CPP-$TargetVendor_CPP" = "xfreebsd-portbld" \
-      -o "x$TargetOS_CPP-$TargetVendor_CPP" = "xsolaris2-unknown"; then
+  # Use `HaskellTargetOs` in order to conflate Darwin variants
+  case "$HaskellTargetOs-$TargetVendor_CPP" in
+    OSDarwin-apple|OSFreeBSD-portbld|OSSolaris2-unknown)
       HaveDtrace=YES
-    fi
+      ;;
+    *)
+      HaveDtrace=NO
+      ;;
   fi
 fi
 AC_SUBST(HaveDtrace)
