--- a/configure.ac
+++ b/configure.ac
@@ -570,7 +570,8 @@ fi
 NmCmd="$NM"
 AC_SUBST([NmCmd])
 
-if test "$TargetOS_CPP" = "darwin"
+# Use `HaskellTargetOs` in order to conflate Darwin variants
+if test "$HaskellTargetOs" = "OSDarwin"
 then
     AC_MSG_CHECKING(whether nm program is broken)
     # Some versions of XCode ship a broken version of `nm`. Detect and work
@@ -800,10 +801,14 @@ dnl ** check for dtrace (currently only implemented for Mac OS X)
 HaveDtrace=NO
 AC_PATH_PROG(DtraceCmd,dtrace)
 if test -n "$DtraceCmd"; then
-  if test "x$TargetOS_CPP-$TargetVendor_CPP" = "xdarwin-apple" \
-		-o "x$TargetOS_CPP-$TargetVendor_CPP" = "xfreebsd-portbld" \
-		-o "x$TargetOS_CPP-$TargetVendor_CPP" = "xsolaris2-unknown"; then
-    HaveDtrace=YES
+  # Use `HaskellTargetOs` in order to conflate Darwin variants
+  case "$HaskellTargetOs-$TargetVendor_CPP" in
+     OSDarwin-apple|OSFreeBsd-portbld|OSSolaris2-unknown)
+       HaveDtrace=YES
+       ;;
+     *)
+       HaveDtrace=NO
+       ;;
   fi
 fi
 AC_SUBST(HaveDtrace)
