--- a/configure.ac
+++ b/configure.ac
@@ -1228,8 +1228,8 @@ case ${TargetOS} in
     linux|linux-android|freebsd|dragonfly|netbsd|openbsd|kfreebsdgnu|gnu|solaris2)
         RtsLinkerUseMmap=1
         ;;
-    darwin|ios|watchos|tvos)
-        # Don't use mmap on powerpc/darwin as the mmap there doesn't support
+    macos|ios|watchos|tvos)
+        # Don't use mmap on PowerPC/Darwin as the mmap there doesn't support
         # reallocating. Reallocating is needed to allocate jump islands just
         # after each object image. Jumps to these jump islands use relative
         # branches which are limited to offsets that can be represented in
