--- a/rts/package.conf.in
+++ b/rts/package.conf.in
@@ -276,11 +276,11 @@ ld-options:
  *  path.  This is important to use the static gmp in preference on Mac OS.
  *  The used option is specific to the Darwin linker.
  */
-#if defined(darwin_HOST_OS)
+#if defined(macos_HOST_OS)
          , "-Wl,-search_paths_first"
 #endif
 
-#if defined(darwin_HOST_OS) && !defined(x86_64_HOST_ARCH)
+#if defined(macos_HOST_OS) && !defined(x86_64_HOST_ARCH)
          , "-read_only_relocs", "warning"
 #endif
 
