--- a/rts/package.conf.in
+++ b/rts/package.conf.in
@@ -273,7 +273,7 @@ ld-options:
          , "-Wl,-search_paths_first"
 #endif
 
-#if defined(darwin_HOST_OS) && !defined(x86_64_HOST_ARCH)
+#if defined(macos_HOST_OS) && !defined(x86_64_HOST_ARCH)
          , "-read_only_relocs", "warning"
 #endif
 
