update -load-splices/-save-splices patch for 8.6.5

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -320,6 +320,8 @@ Library
         HsDoc
         HsExpr
         HsExprBin
+        HsExprBin_ConversionPS2SE
+        HsExprBin_ConversionSE2PS
         HsExprBin_Conversions
         HsExprBin_Instances
         HsImpExp
